# pointCloude-platform

./: README.md  pyproject.toml
docs/: phase3-development-plan.md
frontend/: app.css  app.js  index.html  viewer.css  viewer.html  viewer.js
frontend/data/: sample-project.json
src/pc_system/: api.py  asset_registry.py  cli.py  cli_parser.py  delivery_package.py  deployment_checklist.py  production_pipeline.py  production_run_report.py
src/pc_system/commands/: phase1.py  phase2.py  phase3.py
tests/: test_api.py  test_asset_registry.py  test_delivery_package.py  test_deployment_checklist.py  test_frontend_showcase_viewer.py  test_frontend_workbench.py  test_frontend_workspace_data.py  test_production_pipeline.py  test_production_run_report.py
